# DriftGuardAI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CASE_STUDY.md  CLAUDE.md  Dockerfile  Jenkinsfile  LICENSE  Makefile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
artifacts/: baseline_metrics.json  current_baseline.json  current_semantic_shift.json  current_shifted.json  deployment_report.md  metrics.json  metrics_transformer.json  reference.json  reference_sample.json
benchmarks/: README.md  closed_loop.py  drift_generators.py  eval_harness.py  head_to_head.py  results.json  results_head_to_head.json  results_promotion_decision.json  results_recovery.json  results_recovery_sweep.json  results_streaming.json  streaming.py  sweep_gradual_topic.json
data/: manifest.json
deploy/: Jenkinsfile.drift
deploy/ansible/: inventory.ini  playbook.yml
deploy/helm/: README.md
deploy/k8s/: deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  prometheusrule.yaml  (+3 more)
docs/: DEMO_SCRIPT.md  DEMO_SLIDES.md  DETECTORS.md  DISTILBERT.md  DRIFTGUARDBENCH.md  GOVERNANCE.md  MANUSCRIPT.md  PROMOTION_DECISION.md  PROMOTION_PROPOSAL_INTAKE.md
examples/: README.md  consume_decision.py  embedding_20news.py  results_embedding.json  results_tabular.json  tabular_adult.py  verdictplane_handoff.py
models/: baseline.joblib
notebooks/: ag_news_drift_demo.ipynb
pipelines/: drift_pipeline.py  training_pipeline.py
scripts/: demo.sh  train_distilbert.py
tests/: test_api.py  test_benchmark.py  test_contract.py  test_detectors.py  test_embedding.py  test_fallback.py  test_helm.py  test_smoke.py  test_tabular.py  test_textdrift.py  test_transformer.py  test_unit.py
(+49 files in other folders)
