[project]
name = "driftguard"
version = "0.1.0"
description = "Self-healing text-classification service with drift detection, baseline-gated retraining, and an operational fallback model."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Frank Asante Van Laarhoven", email = "frankleroyvan@gmail.com" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "scikit-learn>=1.5",
    "joblib>=1.4",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16",
    "datasets>=2.20",
    "mlflow>=2.14",
    "dvc[s3]>=3.51",
    "prometheus-fastapi-instrumentator>=7.0",
    "prometheus-client>=0.20",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Richer, heavier tooling kept out of the critical path so the core install
# stays fast and reliably lockable. The default primary model is scikit-learn.
mlops = ["evidently>=0.4", "zenml>=0.60"]
transformer = ["transformers>=4.42", "torch>=2.3"]
dev = ["pytest>=8.2", "ruff>=0.5", "pre-commit>=3.7"]

[project.scripts]
driftguard-train = "driftguard.train:main"
driftguard-drift = "driftguard.drift:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/driftguard"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "pipelines"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
